<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.yamalinform.alkocalc44.addBottle"
    tools:showIn="@layout/activity_add_bottle">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sId"
        android:id="@+id/tvOutput"
        android:layout_alignBaseline="@+id/sId"
        android:layout_alignBottom="@+id/sId"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnText"
        android:id="@+id/btnOk"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbText"
        android:id="@+id/cbWrite"
        android:layout_above="@+id/btnOk"
        android:layout_alignStart="@+id/btnOk" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/sId"
        android:inputType="numberDecimal"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/peregon" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_above="@+id/sId"
        android:id="@+id/radioGroup"
        android:layout_alignEnd="@+id/cbWrite">

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gradus"
        android:id="@+id/textView"
        android:layout_alignBaseline="@+id/alco"
        android:layout_alignBottom="@+id/alco"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/alco"
        android:layout_below="@+id/sId"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peregon"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/peregon"
        android:layout_alignBottom="@+id/peregon"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/peregon"
        android:layout_below="@+id/alco"
        android:layout_alignStart="@+id/alco" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        android:id="@+id/textView3"
        android:layout_alignBaseline="@+id/volume"
        android:layout_alignBottom="@+id/volume"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/volume"
        android:layout_below="@+id/peregon"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:id="@+id/textView4"
        android:layout_alignBaseline="@+id/sugar"
        android:layout_alignBottom="@+id/sugar"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/sugar"
        android:layout_below="@+id/volume"
        android:layout_alignStart="@+id/peregon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="дата"
        android:id="@+id/textView5"
        android:layout_alignBaseline="@+id/date"
        android:layout_alignBottom="@+id/date"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/date"
        android:layout_below="@+id/sugar"
        android:layout_toEndOf="@+id/textView2"
        android:autoText="false" />

</RelativeLayout>
