<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.yamalinform.alkocalc44.viewBottle$PlaceholderFragment">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="170dp"
        android:id="@+id/ivPic"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:contentDescription="картинка"
        android:src="@drawable/vino" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sId"
        android:id="@+id/tvId"
        android:layout_alignBaseline="@+id/sId"
        android:layout_alignBottom="@+id/sId"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/sId"
        android:inputType="numberDecimal"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/peregon"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gradus"
        android:id="@+id/textView"
        android:layout_alignBaseline="@+id/alco"
        android:layout_alignBottom="@+id/alco"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/alco"
        android:layout_below="@+id/sId"
        android:layout_toEndOf="@+id/textView2"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peregon"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/peregon"
        android:layout_alignBottom="@+id/peregon"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/peregon"
        android:layout_below="@+id/alco"
        android:layout_alignStart="@+id/alco"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        android:id="@+id/textView3"
        android:layout_alignBaseline="@+id/volume"
        android:layout_alignBottom="@+id/volume"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/volume"
        android:layout_below="@+id/peregon"
        android:layout_toEndOf="@+id/textView2"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:id="@+id/textView4"
        android:layout_alignBaseline="@+id/sugar"
        android:layout_alignBottom="@+id/sugar"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/sugar"
        android:layout_below="@+id/volume"
        android:layout_alignStart="@+id/peregon"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="дата"
        android:id="@+id/textView5"
        android:layout_alignBaseline="@+id/date"
        android:layout_alignBottom="@+id/date"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/date"
        android:layout_below="@+id/sugar"
        android:layout_toEndOf="@+id/textView2"
        android:autoText="false"
        android:enabled="false"/>

</RelativeLayout>
